# fsync

./: Cargo.toml  README.md
src/: cli.rs  commit.rs  constants.rs  etc.rs  file.rs  init.rs  main.rs  remove.rs  utils.rs
