[package]
name = "fsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
git2 = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
